--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -155,6 +155,12 @@ html {
     font-size: 1.5rem;
     width: 80%;
     margin: 0 auto;
+    &:link {
+      color: rgb(212, 88, 88);
+    }
+    &:visited {
+      color: rgb(212, 88, 88);
+    }
   }
   
   .login_link_msg, .login_msg a:visited {
